--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^1.0.0",
     "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
-    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3"
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3",
+    "paper-button": "PolymerElements/paper-button#~1.0.8"
   }
 }
