--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "polymer": "Polymer/polymer#^1.0.0",
     "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.3",
-    "paper-button": "PolymerElements/paper-button#~1.0.8"
+    "paper-button": "PolymerElements/paper-button#~1.0.8",
+    "paper-card": "PolymerElements/paper-card#~1.0.6"
   }
 }
